--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <h1>This website will be opened in July.</h1>
     </body>
 </html>
