--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
     <head>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>667班</title>
     </head>
     <body>
-        <h1>This website will be opened in July.</h1>
+        <h1>667班的网站</h1>
+        <h2>将于7月开放</h2>
+        <a href="https://408491.yichafen.com/">积分查询系统</a>
+        <a href="https://docs.qq.com/form/page/DS01sbmZZY01sRVZm">对学生进行实名评价</a>
+        <a href="https://www.wjx.cn/vj/wjt0A0z.aspx">对学生进行匿名评价</a>
     </body>
 </html>
