--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body>
         <h1>667班的网站</h1>
         <h2>将于7月开放</h2>
-        <a href="https://408491.yichafen.com/">积分查询系统</a>
-        <a href="https://docs.qq.com/form/page/DS01sbmZZY01sRVZm">对学生进行实名评价</a>
-        <a href="https://www.wjx.cn/vj/wjt0A0z.aspx">对学生进行匿名评价</a>
+        <a href="https://408491.yichafen.com/">积分查询系统</a><br />
+        <a href="https://docs.qq.com/form/page/DS01sbmZZY01sRVZm">对学生进行实名评价</a><br />
+        <a href="https://www.wjx.cn/vj/wjt0A0z.aspx">对学生进行匿名评价</a><br />
     </body>
 </html>
