--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
         <a href="https://408491.yichafen.com/">积分查询系统</a><br />
         <a href="https://docs.qq.com/form/page/DS01sbmZZY01sRVZm">对学生进行实名评价</a><br />
         <a href="https://www.wjx.cn/vj/wjt0A0z.aspx">对学生进行匿名评价</a><br />
+        <a href="https://docs.qq.com/form/page/DS1FjWndWYnlLSUpC">上传图片</a><br />
+        <a href="https://docs.qq.com/form/page/DS2tkRHJxeWVyUVZo">上传联系方式(学生)</a><br />
     </body>
 </html>
