--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
         <a href="https://www.wjx.cn/vj/wjt0A0z.aspx">对学生进行匿名评价</a><br />
         <a href="https://docs.qq.com/form/page/DS1FjWndWYnlLSUpC">上传图片</a><br />
         <a href="https://docs.qq.com/form/page/DS2tkRHJxeWVyUVZo">上传联系方式(学生)</a><br />
+        <hr />
+        <h2>网站管理员</h2>
+        <h3>李子晗</h3>
+        <p>lizihan@homepigweekly.cn</p>
     </body>
 </html>
